--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/express": "^4.11.1",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/three": "^0.89.10",
+    "axios": "^0.18.0",
+    "express": "^4.16.2",
+    "multer": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
@@ -13,8 +17,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "set port=4000 & nodemon ./src/server/index.js --exec babel-node --presets=latest",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
+    "nodemon": "^1.15.1"
   }
 }
