--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@types/react-dom": "^16.0.4",
     "@types/three": "^0.89.10",
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
     "dat.gui": "^0.7.1",
     "express": "^4.16.2",
     "multer": "^1.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "three": "^0.90.0"
   },
