--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dat.gui": "^0.7.1",
     "express": "^4.16.2",
     "multer": "^1.3.0",
+    "orbit-controls-es6": "^1.0.11",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
