--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dat.gui": "^0.7.1",
     "express": "^4.16.2",
     "multer": "^1.3.0",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
