--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0",
     "dat.gui": "^0.7.1",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "multer": "^1.3.0",
     "npm": "^5.8.0",
     "react": "^16.2.0",
