--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-latest": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "stats.js": "^0.17.0"
   }
 }
