--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "compression": "^1.7.2",
     "dat.gui": "^0.7.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "lodash": "^4.17.5",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "npm": "^5.8.0",
     "react": "^16.2.0",
